# gnome-devel-docs

./: .gitignore  AUTHORS  ChangeLog  GUIDELINES  HACKING  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  gnome-devel-docs.doap  gnome-devel-docs.spec.in  hig-book.xml  hig-ch-bibliography.xml  hig-ch-checks.xml  hig-ch-controls.xml  hig-ch-credits.xml  hig-ch-desktop.xml  hig-ch-dialogs-old.xml  hig-ch-feedback.xml  hig-ch-icons-new.xml  hig-ch-icons.xml  hig-ch-input.xml  hig-ch-intro.xml  hig-ch-language.xml  hig-ch-layout.xml  hig-ch-menus.xml  hig-ch-principles.xml  hig-ch-toolbars.xml  hig-ch-whatsnew.xml  hig-ch-windows.xml  hig.xml  hig_draft1.xml  mini-hig.xml
accessibility-devel-guide/: Makefile.am
accessibility-devel-guide/C/: gad.xml  gtest.xml  index.docbook
accessibility-devel-guide/de/: de.po
accessibility-devel-guide/el/: el.po
accessibility-devel-guide/es/: es.po
accessibility-devel-guide/fr/: fr.po
accessibility-devel-guide/ja/: ja.po
accessibility-devel-guide/pt_BR/: pt_BR.po
accessibility-devel-guide/sl/: sl.po
accessibility-devel-guide/zh_CN/: zh_CN.po
demos/: Makefile.am  guitar-tuner.c.page
demos/C/: audio-player.vala.page  gda-demo.js.page  guitar-tuner.c.page  guitar-tuner.cpp.page  guitar-tuner.py.page  guitar-tuner.vala.page  image-viewer.c.page  image-viewer.js.page  index.page  magic-mirror.vala.page  message-board.c.page  photo-wall.c.page  record-collection.js.page
demos/C/clutter-image-viewer/: clutter-image-viewer.c  clutter-image-viewer.page
demos/C/guitar-tuner/: guitar-tuner.c  guitar-tuner.cc  guitar-tuner.py  guitar-tuner.vala
demos/C/image-viewer/: image-viewer.js  image-viewer.py  image_viewer.c
demos/C/magic-mirror/: magic-mirror-advanced.vala  magic-mirror.vala
demos/C/photo-wall/: CREDITS
demos/audio_player/: audio-player
demos/database/: gda.page
demos/guitar_tuner/: guitar-tuner.c.page
demos/webcam/: webcam.vala  webcam.vala.page
hig/: ChangeLog  ChangeLog.pre-lgo  Makefile.am
hig/C/: hig-book.xml  hig-ch-checks.xml  hig-ch-controls.xml  hig-ch-credits.xml  hig-ch-desktop.xml  hig-ch-feedback.xml  hig-ch-gnome3.xml  hig-ch-icons-new.xml  hig-ch-icons.xml  hig-ch-input.xml  hig-ch-language.xml  hig-ch-layout.xml  hig-ch-menus.xml  hig-ch-principles.xml  hig-ch-toolbars.xml  hig-ch-whatsnew.xml  hig-ch-windows.xml  hig-diff.xml
hig/de/: de.po
hig/el/: el.po
hig/es/: es.po
hig/fr/: fr.po
hig/gl/: gl.po
hig/pt_BR/: pt_BR.po
hig/sl/: sl.po
hig/zh_CN/: zh_CN.po
hig/zh_HK/: zh_HK.po
hig/zh_TW/: zh_TW.po
platform-demos/: Makefile.am
platform-demos/C/: 02_welcome_to_the_grid.js.page  03_getting_the_signal.js.page  GtkApplication.vala.page  GtkApplicationWindow.c.page  GtkApplicationWindow.js.page  GtkApplicationWindow.page  GtkApplicationWindow.py.page  GtkApplicationWindow.vala.page  about-dialog.vala.page  aboutdialog.c.page  aboutdialog.js.page  aboutdialog.py.page  aboutdialog.vala.page  aboutdialog_GMenu.vala.page  audio-player.vala.page  beginner.c.page  beginner.js.page  beginner.py.page  beginner.vala.page  bug-filing.page  button.c.page  button.js.page  button.py.page  button.vala.page  buttonbox.js.page  buttonbox.py.page  buttonboxexample.js  c.page  calculator.vala.page.stub  checkbutton.c.page  checkbutton.js.page  checkbutton.py.page  checkbutton.vala.page  colorbutton.js.page  colorbutton.py.page  colorbutton.vala.page  colorbuttonexample.js  combobox.c.page  combobox.js.page  combobox.py.page  (+188 more)
platform-demos/C/guitar-tuner/: guitar-tuner.c  guitar-tuner.cc  guitar-tuner.js  guitar-tuner.py  guitar-tuner.vala
platform-demos/C/hello-world-vala/: hello-world.vala  newway-menus.ui  newway.vala
platform-demos/C/image-viewer/: image-viewer.c  image-viewer.cc  image-viewer.js  image-viewer.py  image-viewer.vala
platform-demos/C/magic-mirror/: magic-mirror.vala
platform-demos/C/media/: gnome-devtools.catalog  message-board.ogv  progressbar_fill.ogv
platform-demos/C/message-board/: message-board.c
platform-demos/C/photo-wall/: photo-wall.c
platform-demos/C/record-collection/: record-collection.js
platform-demos/C/samples/: 02_welcome_to_the_grid.js  03_getting_the_signal_03.js  GtkApplication.vala  GtkApplicationWindow.c  GtkApplicationWindow.js  GtkApplicationWindow.py  aboutdialog.c  button.c  (+127 more)
platform-demos/ca/: ca.po
platform-demos/de/: de.po
platform-demos/el/: el.po
platform-demos/es/: es.po
platform-demos/fr/: fr.po
platform-demos/gl/: gl.po
platform-demos/pt_BR/: pt_BR.po
platform-overview/: ChangeLog  Makefile.am  apx-modules.xml  bindings.xml  core-tech.xml  desktop-tech.xml  intro.xml  ipc-network.xml  overview.xml  platform.xml
platform-overview/C/: apx-modules.page  apx-modules.xml  atk.page  audience.page  avahi.page  bindings.page  bindings.xml  cairo.page  canberra.page  champlain.page  clutter.page  concepts-deployment.page  concepts-signals.page  core-tech.page  core-tech.xml  d-bus.page  demo-audio-player.vala.page  demo-guitar-tuner.c.page  demo-guitar-tuner.cpp.page  demo-guitar-tuner.py.page  demo-guitar-tuner.vala.page  demo-image-viewer.c.page  demo-image-viewer.cpp.page  demo-image-viewer.js.page  demo-image-viewer.py.page  demo-image-viewer.vala.page  demo-magic-mirror.vala.page  demo-message-board.c.page  demo-photo-wall.c.page  demo-record-collection.js.page  desktop-tech.page  desktop-tech.xml  dev-coding.page  dev-help-appmenu.page  dev-help-build.page  dev-help-write.page  dev-launching-desktop.page  dev-launching-icons.page  dev-launching-mime.page  dev-launching-startupnotify.page  (+92 more)
platform-overview/ca/: ca.po
platform-overview/cs/: cs.po
platform-overview/de/: de.po
platform-overview/el/: el.po
platform-overview/es/: es.po
platform-overview/fr/: fr.po
platform-overview/gl/: gl.po
platform-overview/it/: it.po
platform-overview/ja/: ja.po
platform-overview/oc/: oc.po
platform-overview/pt_BR/: pt_BR.po
platform-overview/ru/: ru.po
platform-overview/sl/: sl.po
platform-overview/sv/: sv.po
platform-overview/uk/: uk.po
platform-overview/zh_CN/: zh_CN.po
(+672 files in other folders)
