SUBDIRS =				\
	accessibility-devel-guide	\
	articles			\
	demos				\
	gdp-handbook			\
	gdp-style-guide			\
	hig				\
	integration-guide		\
	optimization-guide		\
	platform-overview

EXTRA_DIST = gnome-doc-utils.make
DISTCLEANFILE = gnome-doc-utils.make
DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
