AC_INIT([gnome-devel-docs],[3.6.0])

AM_INIT_AUTOMAKE([no-dist-gzip dist-xz])
AM_MAINTAINER_MODE([enable])

GNOME_DOC_INIT

AC_OUTPUT([
Makefile
accessibility-devel-guide/Makefile
platform-demos/Makefile
hig/Makefile
integration-guide/Makefile
optimization-guide/Makefile
platform-overview/Makefile
])
