AC_INIT([gnome-devel-docs],[3.10.3])

AM_INIT_AUTOMAKE([no-dist-gzip dist-xz])
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE([enable])

YELP_HELP_INIT

AC_OUTPUT([
Makefile
accessibility-devel-guide/Makefile
platform-demos/Makefile
hig/Makefile
optimization-guide/Makefile
platform-overview/Makefile
programming-guidelines/Makefile
])
