AC_INIT([gnome-devel-docs],[2.91.91])

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

GNOME_DOC_INIT

AC_OUTPUT([
Makefile
accessibility-devel-guide/Makefile
articles/Makefile
articles/devtools-install/Makefile
demos/Makefile
gdp-handbook/Makefile
gdp-style-guide/Makefile
hig/Makefile
integration-guide/Makefile
optimization-guide/Makefile
platform-overview/Makefile
])
