@YELP_HELP_RULES@

HELP_ID = accessibility-devel-guide

HELP_FILES = index.docbook

HELP_EXTRA = gad.xml gtest.xml legal.xml

HELP_MEDIA =						\
	figures/at-arch.png				\
	figures/badfocus1.png				\
	figures/badfocus2.png				\
	figures/badfocus3.png				\
	figures/depend1a.png				\
	figures/depend1.png				\
	figures/depend2a.png				\
	figures/depend2.png				\
	figures/depend3.png				\
	figures/GNOME_desktop_Accessibility.png		\
	figures/goodfocus2.png				\
	figures/goodfocus3.png				\
	figures/goodfocus.png				\
	figures/label_above.png				\
	figures/label_below.png				\
	figures/label_left.png				\
	figures/label_right.png				\
	figures/nodrop.png

HELP_LINGUAS = de el es fr ja pt_BR sl
