include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = demos

DOC_LINGUAS =

DOC_FIGURES =					\
	gda-demo/demo.png			\
	guitar-tuner/guitar-tuner.png		\
	guitar-tuner/simple-player.png		\
	image-viewer/gtk_test.png

DOC_ENTITIES =

DOC_PAGES =			\
	gda-demo.js.page	\
	guitar-tuner.c.page	\
	message-board.c.page	\
	webcam.vala.page	\
	index.page

dist-hook: doc-dist-hook
