include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = hig-book
DOC_LINGUAS =
DOC_ENTITIES =			\
	hig-ch-bibliography.xml	\
	hig-ch-checks.xml	\
	hig-ch-controls.xml	\
	hig-ch-credits.xml	\
	hig-ch-desktop.xml	\
	hig-ch-feedback.xml	\
	hig-ch-icons-new.xml	\
	hig-ch-icons.xml	\
	hig-ch-input.xml	\
	hig-ch-intro.xml	\
	hig-ch-language.xml	\
	hig-ch-layout.xml	\
	hig-ch-menus.xml	\
	hig-ch-principles.xml	\
	hig-ch-toolbars.xml	\
	hig-ch-windows.xml      \
	hig-ch-whatsnew.xml
DOC_FIGURES =						\
	images/abiword-icon.png \
	images/action-icon.png \
	images/application-edit-menu.png \
	images/application-icons.png \
	images/application-menubar.png \
	images/browser-toolbar.png \
	images/busy-pointers.png \
	images/caution.png \
	images/checkbox_label.png \
	images/colour_and_arrows.png \
	images/colour_only.png \
	images/controls-buttons.png \
	images/controls-check-box-ambiguous.png \
	images/controls-check-boxes-mixed.png \
	images/controls-check-boxes.png \
	images/controls-combo.png \
	images/controls-frames.png \
	images/controls-list-checkbox.png \
	images/controls-list.png \
	images/controls-locked.png \
	images/controls-notebook-list.png \
	images/controls-notebook-tabs.png \
	images/controls-notebook.png \
	images/controls-old-frames.png \
	images/controls-option-menu.png \
	images/controls-radio-button-mixed.png \
	images/controls-radio-buttons.png \
	images/controls-sensitivity.png \
	images/controls-slider-spinbox.png \
	images/controls-slider.png \
	images/controls-spin-box.png \
	images/controls-status-bar-interactive.png \
	images/controls-status-bar.png \
	images/controls-text-choose.png \
	images/controls-text-prompt.png \
	images/controls-text.png \
	images/controls-toggle-button-mixed.png \
	images/controls-toggle-buttons.png \
	images/controls-tree-checkbox.png \
	images/controls-tree.png \
	images/depend1.png \
	images/depend1a.png \
	images/depend2.png \
	images/depend2a.png \
	images/depend3.png \
	images/desktop-applications-menu.png \
	images/df.png \
	images/dragcursor-augmented.png \
	images/dragcursor-copy.png \
	images/dragcursor-link.png \
	images/dragcursor-move.png \
	images/dragcursor-nodrop.png \
	images/dragcursor-rmb.png \
	images/earthDeutan.png \
	images/earthNorm.png \
	images/earthTritan.png \
	images/evolution-icon.png \
	images/EvoToolbar.png \
	images/file-menu.png \
	images/floppy-dissected.png \
	images/fontsel-icon.png \
	images/fontsel-suggestion.png \
	images/gdiskfree-menu.png \
	images/gdiskfree.png \
	images/gedit-icon.png \
	images/generic-bookmarks-menu.png \
	images/generic-browser-go-menu.png \
	images/generic-document-go-menu.png \
	images/generic-format-menu.png \
	images/generic-help-menu.png \
	images/generic-insert-menu.png \
	images/generic-view-menu.png \
	images/generic-windows-menu.png \
	images/gide-icon.png \
	images/glyph-icon.png \
	images/gnome-http-url.png \
	images/gnome-package.png \
	images/gnome-text-x-readme.png \
	images/gnumeric-icon.png \
	images/GtkToolbar.png \
	images/GtkToolbar_browserdefault.png \
	images/GtkToolbar_gedit.png \
	images/GtkToolbar_productivitydefault.png \
	images/highcontrast-book-blur.png \
	images/highcontrast-book.png \
	images/highcontrast-cdrom-blur.png \
	images/highcontrast-cdrom.png \
	images/highcontrast-copy-blur.png \
	images/highcontrast-copy.png \
	images/highcontrast-metaphors.png \
	images/icon-design-process-1.png \
	images/icon-design-process-10.png \
	images/icon-design-process-11.png \
	images/icon-design-process-12.png \
	images/icon-design-process-2.png \
	images/icon-design-process-3.png \
	images/icon-design-process-4.png \
	images/icon-design-process-5.png \
	images/icon-design-process-6.png \
	images/icon-design-process-7.png \
	images/icon-design-process-8.png \
	images/icon-design-process-9.png \
	images/icon-style-aqua.png \
	images/icon-style-gnome.png \
	images/icon-style-java.png \
	images/icon_perspective_shelf.png \
	images/icon_perspective_table.png \
	images/icons_labels.png \
	images/important.png \
	images/installer-icon.png \
	images/label_above.png \
	images/label_below.png \
	images/label_left.png \
	images/label_right.png \
	images/large_icon_label.png \
	images/layout1.png \
	images/layout2.png \
	images/layout_callouts.png \
	images/levels-lowcontrast.png \
	images/list_control_label.png \
	images/log-icon.png \
	images/manual-alert-spacing.png \
	images/manual-button-ordering.png \
	images/menus-command-group.png \
	images/menus-checkbox-group.png \
	images/menu-icons.png \
	images/menus-dropdown.png \
	images/menus-popup.png \
	images/menus-radiobutton-group.png \
	images/menus-submenu.png \
	images/mnemonics_and_shortcuts.png \
	images/nautilus-icon.png \
	images/note.png \
	images/object-icon.png \
	images/object-icons.png \
	images/object-menu.png \
	images/object-menubar.png \
	images/other_labels.png \
	images/palette-1.png \
	images/palette-10.png \
	images/palette-11.png \
	images/palette-12.png \
	images/palette-13.png \
	images/palette-14.png \
	images/palette-15.png \
	images/palette-16.png \
	images/palette-17.png \
	images/palette-18.png \
	images/palette-19.png \
	images/palette-2.png \
	images/palette-20.png \
	images/palette-21.png \
	images/palette-22.png \
	images/palette-23.png \
	images/palette-24.png \
	images/palette-25.png \
	images/palette-26.png \
	images/palette-27.png \
	images/palette-28.png \
	images/palette-29.png \
	images/palette-3.png \
	images/palette-30.png \
	images/palette-31.png \
	images/palette-32.png \
	images/palette-4.png \
	images/palette-5.png \
	images/palette-6.png \
	images/palette-7.png \
	images/palette-8.png \
	images/palette-9.png \
	images/pointingdevices.png \
	images/progress-checklist-with-bar.png \
	images/progress-checklist.png \
	images/progress-indeterminate.png \
	images/progress-proportion.png \
	images/progress-time.png \
	images/progress-typical-time.png \
	images/quit1.png \
	images/quit2.png \
	images/radio_button_label.png \
	images/rubberband.png \
	images/rubberband_dia.png \
	images/save1.png \
	images/save2.png \
	images/shutdown-icon.png \
	images/size-48x48.png \
	images/small_icon_label.png \
	images/sodipodi-icon.png \
	images/softwareupdateicon.png \
	images/stock_save.png \
	images/textbox_label.png \
	images/tip.png \
	images/toolbar-icons.png \
	images/toolbar-silhouette.png \
	images/toolbars-mail.png \
	images/underline-icon.png \
	images/view-toolbar.png \
	images/warning.png \
	images/windows-alert-authentication.png \
	images/windows-alert-buttons.png \
	images/windows-alert-confirmation.png \
	images/windows-alert-error.png \
	images/windows-alert-information.png \
	images/windows-alert-save.png \
	images/windows-alert-spacing.png \
	images/windows-alert-text.png \
	images/windows-assistant-first-page.png \
	images/windows-assistant-middle-page.png \
	images/windows-dialog-tabbed.png \
	images/windows-explicit-apply.png \
	images/windows-mdi.png \
	images/windows-preferences.png \
	images/windows-primary.png \
	images/windows-progress-checklist-done.png \
	images/windows-progress-checklist-start.png \
	images/windows-progress-checklist.png \
	images/windows-progress-copy-file.png \
	images/windows-progress.png \
	images/windows-properties.png \
	images/windows-sdi.png \
	images/windows-titlebar.png \
	images/windows-toolbox-large.png \
	images/windows-toolbox-small.png \
	images/ximian-palette.png

