include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = hig-book
DOC_LINGUAS =
DOC_ENTITIES =			\
	hig-ch-bibliography.xml	\
	hig-ch-checks.xml	\
	hig-ch-controls.xml	\
	hig-ch-credits.xml	\
	hig-ch-desktop.xml	\
	hig-ch-feedback.xml	\
	hig-ch-icons-new.xml	\
	hig-ch-icons.xml	\
	hig-ch-input.xml	\
	hig-ch-intro.xml	\
	hig-ch-language.xml	\
	hig-ch-layout.xml	\
	hig-ch-menus.xml	\
	hig-ch-principles.xml	\
	hig-ch-toolbars.xml	\
	hig-ch-windows.xml      \
	hig-ch-whatsnew.xml
DOC_FIGURES =						\
	images/EvoToolbar.png \
	images/GtkToolbar.png \
	images/GtkToolbar_browserdefault.png \
	images/GtkToolbar_gedit.png \
	images/GtkToolbar_productivitydefault.png \
	images/action-icon.png \
	images/caution.png \
	images/checkbox_label.png \
	images/colour_and_arrows.png \
	images/colour_only.png \
	images/controls-buttons.png \
	images/controls-check-box-ambiguous.png \
	images/controls-check-boxes-mixed.png \
	images/controls-check-boxes.png \
	images/controls-combo.png \
	images/controls-frames.png \
	images/controls-list-checkbox.png \
	images/controls-list.png \
	images/controls-locked.png \
	images/controls-notebook-list.png \
	images/controls-notebook-tabs.png \
	images/controls-notebook.png \
	images/controls-old-frames.png \
	images/controls-option-menu.png \
	images/controls-progress-indeterminate.png \
	images/controls-progress-time.png \
	images/controls-progress-typical.png \
	images/controls-radio-button-mixed.png \
	images/controls-radio-buttons.png \
	images/controls-sensitivity.png \
	images/controls-slider-spinbox.png \
	images/controls-slider.png \
	images/controls-spin-box.png \
	images/controls-status-bar-interactive.png \
	images/controls-status-bar.png \
	images/controls-text-choose.png \
	images/controls-text-prompt.png \
	images/controls-text.png \
	images/controls-toggle-button-mixed.png \
	images/controls-toggle-buttons.png \
	images/controls-tree-checkbox.png \
	images/controls-tree.png \
	images/depend1.png \
	images/depend1a.png \
	images/depend2.png \
	images/depend2a.png \
	images/depend3.png \
	images/desktop-applications-menu.png \
	images/df.png \
	images/dragcursor-augmented.png \
	images/dragcursor-copy.png \
	images/dragcursor-link.png \
	images/dragcursor-move.png \
	images/dragcursor-nodrop.png \
	images/dragcursor-rmb.png \
	images/feedback-checklist-running.png \
	images/feedback-pointers-busy.png \
	images/floppy-dissected.png \
	images/gdiskfree-menu.png \
	images/gdiskfree.png \
	images/gedit-icon.png \
	images/gide-icon.png \
	images/glyph-icon.png \
	images/gnome-http-url.png \
	images/gnome-package.png \
	images/gnome-text-x-readme.png \
	images/highcontrast-book-blur.png \
	images/highcontrast-book.png \
	images/highcontrast-cdrom-blur.png \
	images/highcontrast-cdrom.png \
	images/highcontrast-copy-blur.png \
	images/highcontrast-copy.png \
	images/highcontrast-metaphors.png \
	images/icon-design-process-1.png \
	images/icon-design-process-10.png \
	images/icon-design-process-11.png \
	images/icon-design-process-12.png \
	images/icon-design-process-2.png \
	images/icon-design-process-3.png \
	images/icon-design-process-4.png \
	images/icon-design-process-5.png \
	images/icon-design-process-6.png \
	images/icon-design-process-7.png \
	images/icon-design-process-8.png \
	images/icon-design-process-9.png \
	images/icons-applications.png \
	images/icons-evolution.png \
	images/icons-font-selection-good.png \
	images/icons-font-selection-poor.png \
	images/icons-gnumeric.png \
	images/icons-menu.png \
	images/icons-nautilus.png \
	images/icons-objects.png \
	images/icons-perspective-shelf.png \
	images/icons-perspective-table.png \
	images/icons-shut-down.png \
	images/icons-silhouette.png \
	images/icons-sodipodi.png \
	images/icons-style-aqua.png \
	images/icons-style-gnome.png \
	images/icons-style-java.png \
	images/icons-system-log.png \
	images/icons-toolbar.png \
	images/icons-underline-text.png \
	images/icons-word-processor.png \
	images/icons_labels.png \
	images/important.png \
	images/installer-icon.png \
	images/label_above.png \
	images/label_below.png \
	images/label_left.png \
	images/label_right.png \
	images/levels-lowcontrast.png \
	images/manual-alert-spacing.png \
	images/manual-button-ordering.png \
	images/menus-application.png \
	images/menus-bookmarks.png \
	images/menus-checkbox-group.png \
	images/menus-command-group.png \
	images/menus-dropdown.png \
	images/menus-edit.png \
	images/menus-file.png \
	images/menus-format.png \
	images/menus-go-browser.png \
	images/menus-go-document.png \
	images/menus-help.png \
	images/menus-insert.png \
	images/menus-popup.png \
	images/menus-radiobutton-group.png \
	images/menus-submenu.png \
	images/menus-view.png \
	images/menus-windows.png \
	images/mnemonics_and_shortcuts.png \
	images/note.png \
	images/object-icon.png \
	images/object-menu.png \
	images/object-menubar.png \
	images/pointingdevices.png \
	images/progress-checklist-with-bar.png \
	images/progress-checklist.png \
	images/progress-proportion.png \
	images/quit1.png \
	images/quit2.png \
	images/rubberband.png \
	images/rubberband_dia.png \
	images/save1.png \
	images/save2.png \
	images/size-48x48.png \
	images/softwareupdateicon.png \
	images/stock_save.png \
	images/tip.png \
	images/toolbars-mail.png \
	images/view-toolbar.png \
	images/visdes-button-label.png \
	images/visdes-colorblind-deutan.png \
	images/visdes-colorblind-normal.png \
	images/visdes-colorblind-tritan.png \
	images/visdes-large-icon-label.png \
	images/visdes-layout-annotated.png \
	images/visdes-layout-good.png \
	images/visdes-layout-poor.png \
	images/visdes-list-label.png \
	images/visdes-other-labels.png \
	images/visdes-palette-1.png \
	images/visdes-palette-10.png \
	images/visdes-palette-11.png \
	images/visdes-palette-12.png \
	images/visdes-palette-13.png \
	images/visdes-palette-14.png \
	images/visdes-palette-15.png \
	images/visdes-palette-16.png \
	images/visdes-palette-17.png \
	images/visdes-palette-18.png \
	images/visdes-palette-19.png \
	images/visdes-palette-2.png \
	images/visdes-palette-20.png \
	images/visdes-palette-21.png \
	images/visdes-palette-22.png \
	images/visdes-palette-23.png \
	images/visdes-palette-24.png \
	images/visdes-palette-25.png \
	images/visdes-palette-26.png \
	images/visdes-palette-27.png \
	images/visdes-palette-28.png \
	images/visdes-palette-29.png \
	images/visdes-palette-3.png \
	images/visdes-palette-30.png \
	images/visdes-palette-31.png \
	images/visdes-palette-32.png \
	images/visdes-palette-4.png \
	images/visdes-palette-5.png \
	images/visdes-palette-6.png \
	images/visdes-palette-7.png \
	images/visdes-palette-8.png \
	images/visdes-palette-9.png \
	images/visdes-palette.png \
	images/visdes-radiobutton-label.png \
	images/visdes-small-icon-label.png \
	images/visdes-textbox-label.png \
	images/warning.png \
	images/windows-alert-authentication.png \
	images/windows-alert-buttons.png \
	images/windows-alert-confirmation.png \
	images/windows-alert-error.png \
	images/windows-alert-information.png \
	images/windows-alert-save.png \
	images/windows-alert-spacing.png \
	images/windows-alert-text.png \
	images/windows-assistant-first-page.png \
	images/windows-assistant-middle-page.png \
	images/windows-dialog-tabbed.png \
	images/windows-explicit-apply.png \
	images/windows-mdi.png \
	images/windows-preferences.png \
	images/windows-primary.png \
	images/windows-progress-checklist-done.png \
	images/windows-progress-checklist-start.png \
	images/windows-progress-checklist.png \
	images/windows-progress-copy-file.png \
	images/windows-progress.png \
	images/windows-properties.png \
	images/windows-sdi.png \
	images/windows-titlebar.png \
	images/windows-toolbox-large.png \
	images/windows-toolbox-small.png


