include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gnome-devel-demos

DOC_LINGUAS = ca de el es fr gl

demo_sources = \
	audio-player/audio-player.vala		\
	guitar-tuner/guitar-tuner.c		\
	guitar-tuner/guitar-tuner.cc		\
	guitar-tuner/guitar-tuner.js		\
	guitar-tuner/guitar-tuner.py		\
	guitar-tuner/guitar-tuner.vala		\
	image-viewer/image-viewer.c		\
	image-viewer/image-viewer.cc		\
	image-viewer/image-viewer.js		\
	image-viewer/image-viewer.py		\
	image-viewer/image-viewer.vala		\
	magic-mirror/magic-mirror.vala		\
	magic-mirror/magic-mirror-advanced.vala \
	message-board/message-board.c		\
	photo-wall/photo-wall.c			\
	record-collection/record-collection.js	\
	samples/aboutdialog.py			\
	samples/aboutdialog.vala		\
	samples/button.js			\
	samples/button.py			\
	samples/button.vala			\
	samples/checkbutton.py			\
	samples/checkbutton.vala		\
	samples/combobox.vala			\
	samples/dialog.py			\
	samples/dialog.vala			\
	samples/entry.py			\
	samples/entry.vala			\
	samples/gmenu.c				\
	samples/gmenu.js			\
	samples/gmenu.py			\
	samples/gmenu.vala			\
	samples/grid.py				\
	samples/grid.vala			\
	samples/GtkApplicationWindow.c		\
        samples/GtkApplicationWindow.js		\
	samples/GtkApplicationWindow.py		\
	samples/GtkApplicationWindow.vala	\
	samples/image.c				\
	samples/image.py			\
	samples/image.vala			\
	samples/label.c				\
	samples/label.js			\
	samples/label.py			\
	samples/label.vala			\
	samples/linkbutton.py			\
	samples/messagedialog.js		\
	samples/messagedialog.py		\
	samples/messagedialog.vala		\
	samples/progressbar.py			\
	samples/progressbar.vala		\
	samples/radiobutton.py			\
	samples/radiobutton.vala		\
	samples/scale.py			\
	samples/scrolledwindow.py		\
	samples/spinbutton.py			\
	samples/spinner.py			\
	samples/spinner.vala			\
	samples/statusbar.py			\
	samples/statusbar.vala			\
	samples/switch.py			\
	samples/switch.vala			\
	samples/textview.py			\
	samples/togglebutton.py			\
	samples/togglebutton.vala		\
	samples/toolbar.vala			\
	samples/treeview_simple_liststore.vala	\
	samples/window.c			\
	samples/window.py			\
	samples/window.vala			\
	media/gnome-devtools.catalog

DOC_FIGURES = \
	media/aboutdialog_GMenu.png		\
	media/button.png			\
	media/checkbutton.png			\
	media/combobox.png			\
	media/dialog.png			\
	media/entry.png				\
	media/fedora.png			\
	media/gmenu.c.png			\
	media/gmenu.js.png			\
	media/gmenu.py.png			\
	media/gmenu.vala.png			\
	media/grid.png				\
	media/grid_with_entry.png		\
	media/guitar-tuner.png			\
	media/guitar-tuner-glade.png		\
	media/guitar-tuner-pipeline.png		\
	media/helloWorldJs.png			\
	media/image.png				\
	media/image-viewer.png			\
	media/label.png				\
	media/linkbutton.png			\
	media/magic-mirror.png			\
	media/message-board.ogv			\
	media/messagedialog.png			\
	media/opensuse.png			\
	media/photo-wall.png			\
	media/photo-wall-focused.png		\
	media/progressbar.ogv			\
	media/radiobutton.png			\
	media/record-collection.png		\
	media/scale.png				\
	media/scrolledwindow.png		\
	media/spinbutton.png			\
	media/spinner.png			\
	media/statusbar.png			\
	media/switch_on.png			\
	media/switch_off.png			\
	media/textview.png			\
	media/togglebutton.png			\
	media/toolbar.png			\
	media/toolbar2.png			\
	media/treeview_simple_liststore.png	\
	media/ubuntu.png			\
	media/weatherAppJs.png			\
	media/window.png			\
	$(demo_sources)

DOC_PAGES =				\
	aboutdialog.py.page		\
	aboutdialog.vala.page		\
	audio-player.vala.page		\
	beginner.c.page			\
	beginner.js.page		\
	beginner.py.page		\
	beginner.vala.page		\
	bug-filing.page			\
	button.js.page			\
	button.py.page			\
	button.vala.page		\
	c.page				\
	checkbutton.py.page		\
	checkbutton.vala.page		\
	combobox.vala.page		\
	cpp.page			\
	desktop.js.page			\
	dialog.py.page			\
	dialog.vala.page		\
	documentation.page		\
	entry.py.page			\
	entry.vala.page			\
	getting-ready.page		\
	gmenu.c.page			\
	gmenu.js.page			\
	gmenu.py.page			\
	gmenu.vala.page			\
	grid.js.page			\
	grid.py.page			\
	grid.vala.page			\
	grid_with_entry.js.page		\
	GtkApplicationWindow.c.page	\
	GtkApplicationWindow.js.page	\
	GtkApplicationWindow.py.page	\
	GtkApplicationWindow.vala.page	\
	guitar-tuner.c.page		\
	guitar-tuner.cpp.page		\
	guitar-tuner.js.page		\
	guitar-tuner.py.page		\
	guitar-tuner.vala.page		\
	helloWorld.js.page		\
	helloworldautotools.js.page	\
	image.c.page			\
	image.py.page			\
	image.vala.page			\
	image-viewer.c.page		\
	image-viewer.cpp.page		\
	image-viewer.js.page		\
	image-viewer.py.page		\
	image-viewer.vala.page		\
	index.page			\
	js.page				\
	label.c.page			\
	label.js.page			\
	label.py.page			\
	label.vala.page			\
	linkbutton.py.page		\
	magic-mirror.vala.page		\
	message-board.c.page		\
	messagedialog.js.page		\
	messagedialog.py.page		\
	messagedialog.vala.page		\
	photo-wall.c.page		\
	progressbar.py.page		\
	progressbar.vala.page		\
	py.page				\
	radiobutton.py.page		\
	radiobutton.vala.page		\
	record-collection.js.page	\
	scale.py.page			\
	scrolledwindow.py.page		\
	spinbutton.py.page		\
	spinner.py.page			\
	spinner.vala.page		\
	statusbar.py.page		\
	statusbar.vala.page		\
	switch.py.page			\
	switch.vala.page		\
	textview.py.page		\
	togglebutton.py.page		\
	togglebutton.vala.page		\
	toolbar.js.page			\
	toolbar.vala.page		\
	treeview_simple_liststore.vala.page	\
	translate.page			\
	vala.page			\
	weatherApp.js.page		\
	weatherAppMain.js.page		\
	weatherAutotools.js.page	\
	weatherGeonames.js.page		\
	window.c.page			\
	window.js.page			\
	window.py.page			\
	window.vala.page

dist-hook: doc-dist-hook
