include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gnome-devel-demos

DOC_LINGUAS = ca de el es fr gl

demo_sources = \
	audio-player/audio-player.vala		\
	exercises/menubar.exercises		\
	guitar-tuner/guitar-tuner.c		\
	guitar-tuner/guitar-tuner.cc		\
	guitar-tuner/guitar-tuner.js		\
	guitar-tuner/guitar-tuner.py		\
	guitar-tuner/guitar-tuner.vala		\
	image-viewer/image-viewer.c		\
	image-viewer/image-viewer.cc		\
	image-viewer/image-viewer.js		\
	image-viewer/image-viewer.py		\
	image-viewer/image-viewer.vala		\
	magic-mirror/magic-mirror.vala		\
	magic-mirror/magic-mirror-advanced.vala \
	message-board/message-board.c		\
	photo-wall/photo-wall.c			\
	record-collection/record-collection.js	\
	samples/aboutdialog.js			\
	samples/aboutdialog.py			\
	samples/aboutdialog.vala		\
	samples/button.c			\
	samples/button.js			\
	samples/button.py			\
	samples/button.vala			\
	samples/checkbutton.c			\
	samples/checkbutton.js			\
	samples/checkbutton.py			\
	samples/checkbutton.vala		\
	samples/colorbutton.py			\
	samples/colorbutton.vala		\
	samples/comboboxtext.js			\
	samples/combobox.py			\
	samples/combobox.vala			\
	samples/combobox_multicolumn.py		\
	samples/dialog.c			\
	samples/dialog.js			\
	samples/dialog.py			\
	samples/dialog.vala			\
	samples/entry.c				\
	samples/entry.js			\
	samples/entry.py			\
	samples/entry.vala			\
	samples/filechooserdialog.vala		\
	samples/filechooserdialog.ui		\
	samples/fontchooserwidget.py			\
	samples/fruitbat.png			\
	samples/gentoopenguin.png		\
	samples/gmenu.c				\
	samples/gmenu.js			\
	samples/gmenu.py			\
	samples/gmenu.vala			\
	samples/gnome-image.png			\
	samples/grid.c				\
	samples/grid.js				\
	samples/grid.py				\
	samples/grid.vala			\
	samples/GtkApplicationWindow.c		\
        samples/GtkApplicationWindow.js		\
	samples/GtkApplicationWindow.py		\
	samples/GtkApplicationWindow.vala	\
	samples/image.c				\
	samples/image.py			\
	samples/image.vala			\
	samples/label.c				\
	samples/label.js			\
	samples/label.py			\
	samples/label.vala			\
	samples/linkbutton.c			\
	samples/linkbutton.js			\
	samples/linkbutton.py			\
	samples/linkbutton.vala			\
	samples/menubutton.js			\
	samples/menubar.vala			\
	samples/menubar.ui			\
	samples/menubar_basis.vala		\
	samples/menubar_basis.ui		\
	samples/messagedialog.js		\
	samples/messagedialog.py		\
	samples/messagedialog.vala		\
	samples/muteswan.png			\
	samples/progressbar.c			\
	samples/progressbar.js			\
	samples/progressbar.py			\
	samples/progressbar.vala		\
	samples/radiobutton.c			\
	samples/radiobutton.js			\
	samples/radiobutton.py			\
	samples/radiobutton.vala		\
	samples/redfox.png			\
	samples/scale.c				\
	samples/scale.js			\
	samples/scale.py			\
	samples/scale.vala			\
	samples/scrolledwindow.py		\
	samples/scrolledwindow.py		\
	samples/separator.py			\
	samples/spinbutton.c			\
	samples/spinbutton.js			\
	samples/spinbutton.py			\
	samples/spinbutton.vala			\
	samples/spinner.c			\
	samples/spinner.js			\
	samples/spinner.py			\
	samples/spinner.vala			\
	samples/statusbar.c			\
	samples/statusbar.js			\
	samples/statusbar.py			\
	samples/statusbar.vala			\
	samples/switch.c			\
	samples/switch.js			\
	samples/switch.py			\
	samples/switch.vala			\
	samples/textview.c			\
	samples/textview.js			\
	samples/textview.py			\
	samples/textview.vala			\
	samples/togglebutton.c			\
	samples/togglebutton.js			\
	samples/togglebutton.py			\
	samples/togglebutton.vala		\
	samples/toolbar.js			\
	samples/toolbar.py			\
	samples/toolbar.vala			\
	samples/toolbar_builder.py		\
	samples/toolbar_builder.ui		\
	samples/toolbar_builder.vala		\
	samples/treeview_advanced_liststore.py	\
	samples/treeview_cellrenderertoggle.py	\
	samples/treeview_simple_liststore.js	\
	samples/treeview_simple_liststore.py	\
	samples/treeview_simple_liststore.vala	\
	samples/treeview_treestore.py	\
	samples/window.c			\
	samples/window.js			\
	samples/window.py			\
	samples/window.vala			\
	media/gnome-devtools.catalog

DOC_FIGURES = \
	media/aboutdialog_GMenu.png		\
	media/button.png			\
	media/checkbutton.png			\
	media/colorbutton.png			\
	media/combobox.png			\
	media/combobox_multicolumn.png		\
	media/dialog.png			\
	media/entry.png				\
	media/fedora.png			\
	media/fontchooserwidget.png		\
	media/gediteditor.png			\
	media/geditview.png			\
	media/glade_select_toolbar.png		\
	media/glade_toolbar_common.png		\
	media/glade_toolbar_edit.png		\
	media/glade_toolbar_editor.png		\
	media/glade_toolbar_general.png		\
	media/glade_ui.png			\
	media/glade_visible_no.png		\
	media/gmenu.c.png			\
	media/gmenu.js.png			\
	media/gmenu.py.png			\
	media/gmenu.vala.png			\
	media/grid.png				\
	media/guitar-tuner.png			\
	media/guitar-tuner-glade.png		\
	media/guitar-tuner-pipeline.png		\
	media/helloWorldJs.png			\
	media/image.png				\
	media/image-viewer.png			\
	media/label.png				\
	media/linkbutton.png			\
	media/magic-mirror.png			\
	media/menubar.png			\
	media/menubutton.png			\
	media/menubar_choices.png		\
	media/message-board.ogv			\
	media/messagedialog.png			\
	media/opensuse.png			\
	media/photo-wall.png			\
	media/photo-wall-focused.png		\
	media/progressbar.ogv			\
	media/progressbar_fill.ogv		\
	media/radiobutton.png			\
	media/radiobuttontravel.png		\
	media/record-collection.png		\
	media/scale.png				\
	media/scale2.png			\
	media/scalepenguins.png			\
	media/scrolledwindow.png		\
	media/separator.png			\
	media/spinbutton.png			\
	media/spinbuttonkittens.png		\
	media/spinner.png			\
	media/statusbar.png			\
	media/statusbar2.png			\
	media/statusbar3.png			\
	media/switchanimals.png			\
	media/switch_on.png			\
	media/switch_off.png			\
	media/textview.png			\
	media/textviewpenguinchat.png		\
	media/togglebutton.png			\
	media/toolbar.png			\
	media/treeview_advanced_liststore.png	\
	media/treeview_cellrenderertoggle.png	\
	media/treeview_simple_liststore.png	\
	media/treeview_simple_liststore_penguins.png	\
	media/treeview_treestore.png	\
	media/ubuntu.png			\
	media/weatherAppJs.png			\
	media/window.png			\
	$(demo_sources)

DOC_PAGES =				\
	aboutdialog.js.page		\
	aboutdialog.py.page		\
	aboutdialog.vala.page		\
	audio-player.vala.page		\
	beginner.c.page			\
	beginner.js.page		\
	beginner.py.page		\
	beginner.vala.page		\
	bug-filing.page			\
	button.c.page			\
	button.js.page			\
	button.py.page			\
	button.vala.page		\
	c.page				\
	checkbutton.c.page		\
	checkbutton.js.page		\
	checkbutton.py.page		\
	checkbutton.vala.page		\
	colorbutton.py.page		\
	colorbutton.vala.page		\
	comboboxtext.js.page		\
	combobox.py.page		\
	combobox.vala.page		\
	combobox_multicolumn.py.page	\
	cpp.page			\
	desktop.js.page			\
	dialog.c.page			\
	dialog.js.page			\
	dialog.py.page			\
	dialog.vala.page		\
	documentation.page		\
	entry.c.page			\
	entry.js.page			\
	entry.py.page			\
	entry.vala.page			\
	filechooserdialog.vala.page	\
	fontchooserwidget.py.page	\
	getting-ready.page		\
	gmenu.c.page			\
	gmenu.js.page			\
	gmenu.py.page			\
	gmenu.vala.page			\
	grid.c.page			\
	grid.js.page			\
	grid.py.page			\
	grid.vala.page			\
	GtkApplicationWindow.c.page	\
	GtkApplicationWindow.js.page	\
	GtkApplicationWindow.py.page	\
	GtkApplicationWindow.vala.page	\
	guitar-tuner.c.page		\
	guitar-tuner.cpp.page		\
	guitar-tuner.js.page		\
	guitar-tuner.py.page		\
	guitar-tuner.vala.page		\
	helloWorld.js.page		\
	helloworldautotools.js.page	\
	image.c.page			\
	image.py.page			\
	image.vala.page			\
	image-viewer.c.page		\
	image-viewer.cpp.page		\
	image-viewer.js.page		\
	image-viewer.py.page		\
	image-viewer.vala.page		\
	index.page			\
	js.page				\
	label.c.page			\
	label.js.page			\
	label.py.page			\
	label.vala.page			\
	linkbutton.c.page		\
	linkbutton.js.page		\
	linkbutton.py.page		\
	linkbutton.vala.page		\
	magic-mirror.vala.page		\
	menubar.vala.page		\
	menubutton.js.page		\
	message-board.c.page		\
	messagedialog.js.page		\
	messagedialog.py.page		\
	messagedialog.vala.page		\
	model-view-controller.py.page		\
	photo-wall.c.page		\
	progressbar.c.page		\
	progressbar.js.page		\
	progressbar.py.page		\
	progressbar.vala.page		\
	properties.py.page		\
	py.page				\
	radiobutton.c.page		\
	radiobutton.js.page		\
	radiobutton.py.page		\
	radiobutton.vala.page		\
	record-collection.js.page	\
	scale.c.page			\
	scale.js.page			\
	scale.py.page			\
	scale.vala.page			\
	scrolledwindow.py.page		\
	scrolledwindow.vala.page	\
	separator.py.page		\
	set-up-gedit.page		\
	signals-callbacks.py.page	\
	spinbutton.c.page		\
	spinbutton.js.page		\
	spinbutton.py.page		\
	spinbutton.vala.page		\
	spinner.c.page			\
	spinner.js.page			\
	spinner.py.page			\
	spinner.vala.page		\
	statusbar.c.page		\
	statusbar.js.page		\
	statusbar.py.page		\
	statusbar.vala.page		\
	strings.py.page			\
	switch.c.page			\
	switch.js.page			\
	switch.py.page			\
	switch.vala.page		\
	textview.c.page			\
	textview.js.page		\
	textview.py.page		\
	textview.vala.page		\
	togglebutton.c.page		\
	togglebutton.js.page		\
	togglebutton.py.page		\
	togglebutton.vala.page		\
	toolbar.js.page			\
	toolbar.py.page			\
	toolbar.vala.page		\
	toolbar_builder.py.page	\
	toolbar_builder.vala.page	\
	treeview_advanced_liststore.py.page	\
	treeview_cellrenderertoggle.py.page	\
	treeview_simple_liststore.js.page	\
	treeview_simple_liststore.py.page	\
	treeview_simple_liststore.vala.page	\
	treeview_treestore.py.page	\
	translate.page			\
	vala.page			\
	weatherApp.js.page		\
	weatherAppMain.js.page		\
	weatherAutotools.js.page	\
	weatherGeonames.js.page		\
	window.c.page			\
	window.js.page			\
	window.py.page			\
	window.vala.page

dist-hook: doc-dist-hook
